syntax = "proto3";

import "google/protobuf/descriptor.proto";

package protorender;

option go_package = "github.com/sananguliyev/airtruct/internal/protorender";

extend google.protobuf.EnumValueOptions {
  string string_value = 51234;
}

enum WorkerStreamStatus {
  waiting = 0 [(string_value) = "waiting"];
  running = 1 [(string_value) = "running"];
  stopped = 2 [(string_value) = "stopped"];
  completed = 3 [(string_value) = "completed"];
  failed = 4 [(string_value) = "failed"];
}

